# pyd3js

./: .gitignore  QUALITY_STANDARDS.md  README.md  SECURITY.md  conftest.py  pyproject.toml  upstream_lock.json  upstream_resolved.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
scripts/: gen_packages.py  package_manifest.json  tape_to_pytest.py  vendor_upstream.py
tests/: test_import_all_packages.py  test_oracle_smoke.py  test_umbrella.py
tests/oracle/: __init__.py  client.py
tests/util/: normalize.py
tools/oracle/: list_d3_array_exports.mjs  list_d3_color_exports.mjs  package-lock.json  package.json  run.mjs
