[project]
name = "pyd3js-monorepo"
version = "0.0.0"
description = "Workspace root for pyd3 (D3 in Python) packages"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pyd3js>=0.0.0",
]

[tool.uv.sources]
pyd3js = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.12",
    "twine>=6.2.0",
    "ty>=0.0.1",
]

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
addopts = "-q"
markers = [
    "oracle: requires Node oracle (tools/oracle npm install)",
    "upstream: requires vendored upstream repo dependencies (npm install)",
]

# pyd3js-geo mirrors d3-geo’s JS patterns (callable `.invert`, dynamic methods on factories).
[[tool.ty.overrides]]
include = ["packages/pyd3js-geo/**/*.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-assignment = "ignore"
call-top-callable = "ignore"

# pyd3js-interpolate mirrors d3-interpolate’s factory objects (e.g. `.gamma`, `.rho`, `.duration`)
# and string/transform builders that mix placeholders with str segments.
[[tool.ty.overrides]]
include = ["packages/pyd3js-interpolate/**/*.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
unsupported-operator = "ignore"

# pyd3js-selection mirrors d3-selection’s dynamic runtime patterns (callable selectors,
# data-joins, dynamic event dispatch, and extension of selection prototype in tests).
[[tool.ty.overrides]]
include = ["packages/pyd3js-selection/**/*.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-assignment = "ignore"
invalid-type-form = "ignore"
missing-argument = "ignore"
too-many-positional-arguments = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
